Minor changes to theory

--- a/test.ipynb
+++ b/test.ipynb
@@ -876,6 +876,8 @@
     "    '''\n",
     "    genotype_freq: dictionary, prior probability that the root has genotype R, H or A\n",
     "    mutation_rate: proportion of mutated loci\n",
+    "    \n",
+    "    returns priors for RH mixture and AH mixture\n",
     "    '''\n",
     "    \n",
     "    state_freq = {s: None for s in ['RR', 'HH', 'AA', 'RH', 'HR', 'AH', 'HA']}\n",
