--- a/test.ipynb
+++ b/test.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "c2859045-57b5-4a7f-9041-3fdf25cdaea6",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "       -1.37756068])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "85cb5fd1-a07a-4768-8ac6-814afb902421",
    "metadata": {},
    "outputs": [
@@ -369,18 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 33.75015613238017 min\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m posteriors \u001b[38;5;241m=\u001b[39m get_posteriors(ref, alt, n_threads \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRuntime:\u001b[39m\u001b[38;5;124m'\u001b[39m, (time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m60\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mresult\u001b[49m, columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mR\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mH\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRH\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHA\u001b[39m\u001b[38;5;124m'\u001b[39m], index \u001b[38;5;241m=\u001b[39m df_ref\u001b[38;5;241m.\u001b[39mindex)\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./posteriors.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'result' is not defined"
+      "Runtime: 33.48343937397003 min\n"
      ]
     }
    ],
@@ -388,7 +377,7 @@
     "start_time = time.time()\n",
     "posteriors = get_posteriors(ref, alt, n_threads = 6)\n",
     "print('Runtime:', (time.time() - start_time) / 60, 'min')\n",
-    "pd.DataFrame(result, columns = ['R', 'H', 'A', 'RH', 'HA'], index = df_ref.index).to_csv('./posteriors.csv')"
+    "pd.DataFrame(posteriors, columns = ['R', 'H', 'A', 'RH', 'HA'], index = df_ref.index).to_csv('./posteriors.csv')"
    ]
   },
   {
@@ -455,12 +444,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "090bf80e-5cb8-4e99-9973-592531e821bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(data = {'correlation posterior': np.concatenate((corr_posteriors, [0]))}, index = df_posteriors.index[mutated_idx]).to_csv('./corr_posteriors.csv')"
+    "pd.DataFrame(data = {'correlation posterior': np.concatenate((corr_posteriors, [0])), 'mutation type': ['H' + h for h in homos]}, \n",
+    "             index = df_posteriors.index[mutated_idx]).to_csv('./corr_posteriors.csv')"
    ]
   },
   {
