--- a/workbench.ipynb
+++ b/workbench.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg = DataGenerator(25, 100, mut_prop = 0.5)\n",
+    "dg = DataGenerator(100, 200)\n",
     "dg.random_tree()"
    ]
   },
@@ -494,11 +494,51 @@
     "print('Cell tree mean loglikelihood:', optz.ct_joint / likelihoods1.size)\n",
     "print('Mutation tree mean loglikelihood:', optz.mt_joint / likelihoods1.size)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21842d4e",
+   "metadata": {},
+   "source": [
+    "### Other tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "499b8c06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_generator import *\n",
+    "from mutation_detection import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c763f194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dg = DataGenerator(25, 100)\n",
+    "dg.random_tree()\n",
+    "dg.random_mutations()\n",
+    "ref, alt = dg.generate_reads()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c3049bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -513,6 +553,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
