Ran multiple tests; minor improvements

--- a/workbench.ipynb
+++ b/workbench.ipynb
@@ -47,17 +47,18 @@
     "tags": []
    },
    "source": [
-    "### Read data"
+    "### Data analysis"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20256990-cec3-4aa7-b1ba-123e1a188cd9",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "def heterozygosity_map(chromosome, save = False):\n",
-    "    ref = np.array(df_ref.loc[chromosome,:])\n",
-    "    alt = np.array(df_alt.loc[chromosome,:])\n",
+    "def heterozygosity_map(chromosome, fname = None):\n",
+    "    ref, alt = read_data('./Data/glioblastoma_BT_S2/ref.csv', './Data/glioblastoma_BT_S2/alt.csv')\n",
     "    \n",
     "    ref_proportion = (ref + 1) / (ref + alt + 2) # add a dummy count to both ref and alt to avoid division by 0\n",
     "    alpha = 2 * np.arctan(ref + alt) / np.pi # hide loci without enough counts\n",
@@ -68,9 +69,9 @@
     "    plt.title(chromosome, fontsize = 17)\n",
     "    plt.xlabel('locus index', fontsize = 17)\n",
     "    plt.ylabel('cell index', fontsize = 17)\n",
-    "    if save: \n",
-    "        plt.savefig('chromosome' + '.png')\n",
-    "    plt.show()"
+    "    if fname is None: \n",
+    "        fname = 'map_chr' + str(chromosome) + '.png'\n",
+    "    plt.savefig('./figures/' + fname)"
    ]
   },
   {
@@ -115,91 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f830e4c-a725-4dd1-99dd-66b4ec5f3efa",
-   "metadata": {},
-   "source": [
-    "### Mutation detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f181fd2d-d8c1-42b9-9c2f-2650fa6b2711",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mutation_detection import *\n",
-    "from LOH_detection import *"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "99bb33b3-6272-4c98-8a72-9022845f030c",
-   "metadata": {},
-   "source": [
-    "# expected runtime (in minutes) to run on the complete dataset\n",
-    "time_costs[5] / 50 * ref.shape[0] / 60"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85cb5fd1-a07a-4768-8ac6-814afb902421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "posteriors = get_posteriors(ref, alt, n_threads = 6)\n",
-    "print('Runtime:', (time.time() - start_time) / 60, 'min')\n",
-    "pd.DataFrame(posteriors, columns = ['R', 'H', 'A', 'RH', 'HA'], index = df_ref.index).to_csv('./posteriors.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41b461ea-4d8a-433a-a56d-9396b221119c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_posteriors = pd.read_csv('./posteriors.csv', index_col = (0,1))\n",
-    "posteriors = df_posteriors.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fe71449-4746-478f-a0cf-850e443334b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mutated_idx, mut_type_idx = np.where(posteriors[:,3:] > 1 - 1 / posteriors.shape[0])\n",
-    "n_mutated = mutated_idx.size\n",
-    "homos = [['R', 'A'][i] for i in mut_type_idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b598086-bbf1-4948-863f-dd23a7367428",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_posteriors = get_corr_posteriors(ref[mutated_idx,:], alt[mutated_idx,:], homos, corr_prior = 1/2) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "090bf80e-5cb8-4e99-9973-592531e821bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame(data = {'correlation posterior': np.concatenate((corr_posteriors, [0])), 'mutation type': ['H' + h for h in homos]}, \n",
-    "             index = df_posteriors.index[mutated_idx]).to_csv('./corr_posteriors.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "92a4bf55-a51a-4a6e-addc-5218ccf726a7",
    "metadata": {
     "tags": []
@@ -215,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_generator import *"
+    "from data_generator import *\n",
+    "from utilities import *"
    ]
   },
   {
@@ -225,8 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg = DataGenerator(100, 200)\n",
-    "dg.random_tree()"
+    "dg = DataGenerator(50, 400, coverage_sampler=coverage_sampler())\n",
+    "dg.random_tree()\n",
+    "dg.random_mutations(mut_prop = 0.5, genotype_freq = [1., 0., 0.])"
    ]
   },
   {
@@ -240,27 +158,69 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1a3d33b5-b509-4dcf-8f26-f1b0980a599f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adae0980",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "dg.tree.to_graphviz()"
+    "from mutation_detection import mut_type_posteriors"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5912892c-2e9b-492d-91e6-132245839f42",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede30059",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "mt = MutationTree(cell_tree = dg.tree)"
+    "posteriors = mut_type_posteriors(ref_raw, alt_raw, genotype_freq = {'R': 1/3, 'H': 1/3, 'A': 1/3})\n",
+    "selected = np.where(np.sum(posteriors[:,3:], axis = 1) > 0.1)[0]\n",
+    "ref, alt = ref_raw[:,selected], alt_raw[:,selected]"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "132c2d3c-f0f0-4f9a-9a76-a74a2853c0d0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44cbdc2e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "mt.to_graphviz()"
+    "mut_type = np.argmax(posteriors[selected, 3:], axis = 1)\n",
+    "gt1 = np.choose(mut_type, choices = ['R', 'H', 'H', 'A'])\n",
+    "gt2 = np.choose(mut_type, choices = ['H', 'A', 'R', 'H'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da814e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(gt2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c01a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correct mutation and correct direction\n",
+    "np.sum(np.logical_and(gt1 == dg.gt1[selected], gt2 == dg.gt2[selected]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f5d7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correct mutation, either direction\n",
+    "np.sum(np.logical_or(np.logical_and(gt1 == dg.gt1[selected], gt2 == dg.gt2[selected]), np.logical_and(gt2 == dg.gt1[selected], gt1 == dg.gt2[selected])))"
    ]
   },
   {
@@ -286,31 +246,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f3dc63-0942-4d08-849e-bf6dbfeab1c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c159b6f9-e382-4135-9c4a-6319cff5bbc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref, alt, gt1, gt2 = filter_mutations(ref_raw, alt_raw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01d788f9-701c-4faf-a61c-178ebc6421d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(gt1)"
+    "ref, alt, gt1, gt2 = filter_mutations(ref_raw, alt_raw, method = 'threshold', t = 0.5)"
    ]
   },
   {
@@ -352,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optz.ct_joint"
+    "optz.ct_joint / likelihoods1.size"
    ]
   },
   {
@@ -398,6 +338,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4983de45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "acd11917-9663-4779-a258-850b2ba632b6",
    "metadata": {
     "tags": []
@@ -416,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optz.optimize(spaces = ['m'])"
+    "optz.optimize(spaces = ['c', 'm'])"
    ]
   },
   {
@@ -437,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('MSE to real distance matrix:', path_len_dist(optz.ct, dg.tree))\n",
+    "print('MSE of distance matrix:', path_len_dist(optz.ct, dg.tree))\n",
     "print('Cell tree mean loglikelihood:', optz.ct_joint / likelihoods1.size)\n",
     "print('Mutation tree mean loglikelihood:', optz.mt_joint / likelihoods1.size)"
    ]
@@ -490,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('MSE to real distance matrix:', path_len_dist(optz.ct, dg.tree))\n",
+    "print('MSE of distance matrix:', path_len_dist(optz.ct, dg.tree))\n",
     "print('Cell tree mean loglikelihood:', optz.ct_joint / likelihoods1.size)\n",
     "print('Mutation tree mean loglikelihood:', optz.mt_joint / likelihoods1.size)"
    ]
@@ -505,35 +455,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "499b8c06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from data_generator import *\n",
-    "from mutation_detection import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c763f194",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dg = DataGenerator(25, 100)\n",
-    "dg.random_tree()\n",
-    "dg.random_mutations()\n",
-    "ref, alt = dg.generate_reads()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "0c3049bb",
+   "id": "2728dfc1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from utilities import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e53070d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b71e46c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_rev = np.load('./test_results/reversibility_50c_100m/dist_rev.npy')\n",
+    "dist_irr = np.load('./test_results/reversibility_50c_100m/dist_irr.npy')"
+   ]
   }
  ],
  "metadata": {
@@ -552,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
