--- a/figures.ipynb
+++ b/figures.ipynb
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 14 2022, 00:00:00) [GCC 11.3.1 20220421 (Red Hat 11.3.1-3)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
