--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1053,6 +1053,7 @@
    "outputs": [],
    "source": [
     "# Generate read counts matries for the tree data\n",
+    "# Samples coverage poisson distribution  []\n",
     "ref, alt = generator.generate_reads()"
    ]
   },
@@ -1789,7 +1790,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add function to run compute MSE and compare with ground truth"
+   ]
   }
  ],
  "metadata": {
