Update import folders

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -15,13 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from new_implementation.data_generator import DataGenerator\n",
-    "from new_implementation.mutation_filter import MutationFilter\n",
-    "#from new_implementation.cell_tree import CellTree\n",
-    "from new_implementation.mutation_tree import MutationTree\n",
-    "from new_implementation.swap_optimizer import SwapOptimizer\n",
+    "from scite_rna.data_generator import DataGenerator\n",
+    "from scite_rna.mutation_filter import MutationFilter\n",
+    "#from scite_rna.cell_tree import CellTree\n",
+    "from scite_rna.mutation_tree import MutationTree\n",
+    "from scite_rna.swap_optimizer import SwapOptimizer\n",
     "\n",
-    "from new_implementation.tree_functions import path_len_dist"
+    "from scite_rna.tree_functions import path_len_dist"
    ]
   },
   {
